--- a/styles/Statistic.module.css
+++ b/styles/Statistic.module.css
@@ -13,6 +13,12 @@
   width: 180px;
   border-radius: 90px;
   font-size: 4rem;
+
+  @media (max-width: 620px) {
+    width: 120px;
+    height: 120px;
+    font-size: 3rem;
+  }
 }
 
 .text {
