--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -7,6 +7,7 @@
   border: none;
   padding: 10px 25px;
   margin-top: 40px;
+  margin-bottom: 40px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
