--- a/styles/QuestionStatement.module.css
+++ b/styles/QuestionStatement.module.css
@@ -1,8 +1,13 @@
 .questionStatement {
-  display: flex;
+  padding: 25px 25px 0px 25px;
 }
 
 .text {
   font-size: 2.5rem;
   font-weight: 700;
+  line-height: 1.2;
+
+  @media (max-width: 580px) {
+    font-size: 2rem;
+  }
 }
