--- a/styles/Quiz.module.css
+++ b/styles/Quiz.module.css
@@ -3,5 +3,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
 }
