--- a/styles/Result.module.css
+++ b/styles/Result.module.css
@@ -3,10 +3,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   font-size: 2rem;
+  padding: 25px 25px 0px 25px;
+
+  @media (min-width: 620px) {
+    height: 100vh;
+  }
+
+  @media (max-width: 620px) {
+    font-size: 1.2rem;
+  }
 }
 
 .stastistics {
   display: flex;
+
+  @media (max-width: 620px) {
+    flex-direction: column;
+  }
 }
