Ajusta responsividade mobile

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -10,6 +10,10 @@
   margin-bottom: 40px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+
+  @media (max-width: 580px) {
+    margin-top: 10px;
+  }
 }
 
 .button:hover {
