Ajusta responsividade tela de resultado e remove console.log

--- a/styles/QuestionStatement.module.css
+++ b/styles/QuestionStatement.module.css
@@ -1,5 +1,9 @@
 .questionStatement {
-  padding: 8px 25px 0px 25px;
+  padding: 25px 25px 0px 25px;
+
+  @media (max-width: 580px) {
+    padding: 8px 25px 0px 25px;
+  }
 }
 
 .text {
